<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity titles -->
    <string name="app_name">Fashion Wardrobe</string>
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">My Wardrobe</string>
    <string name="ac_name_image_pager">Gallery View</string>
    <string name="ac_name_image_gallery">Paper View</string>
    <!-- Labels -->
    <string name="label_activity_examples">Shop with your circle</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="menu_item_add_friends">Add Friends</string>
    <string name="button_image_wardrobe">Wardrobe</string>
    <string name="button_image_wishlist">Wish List</string>
    <string name="button_image_settings">Settings</string>
    <string name="button_image_likes">Likes</string>
    <string name="button_image_groups">Requests</string>
    <string name="button_image_calendar">Calendar</string>
    <string name="button_image_trends">Trends</string>
    <string name="button_image_suggestions">Suggestions</string>
    <string name="button_image_circles">Circles</string>
    
    <string name="textview_name_profilename">Charles Sobhraj</string>
    <string name="image_wardrobe">Wardrobe Image</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>

</resources>