<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:background="#f1f1f1"
            android:orientation="horizontal" >

 		       
			<ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:layout_gravity="right"
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:src="@drawable/settingsgrey"/>

			<TextView
			    android:id="@+id/textView2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerHorizontal="true"
			    android:layout_centerVertical="true"
			    android:text="@string/app_name"
			    android:textColor="#7c7c7c"
			    android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
        
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    android:layout_marginTop="25dip">

		    <Button
		        android:id="@+id/buttonMyWardrobe"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginRight="46dp"
		        android:background="@drawable/ic_lightbluecircle"
		        android:onClick="onImageGridClick"
		        android:text="@string/button_image_calendar" />

		    <Button
		        android:id="@+id/buttonMyWardrobe"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginLeft="40dp"
		        android:background="@drawable/ic_greencircle"
		        android:onClick="onImageGridClick"
		        android:text="@string/button_image_trends" />

		</RelativeLayout>

		<RelativeLayout 
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dip">
	        <Button
	            android:id="@+id/buttonMyWardrobe"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:layout_alignParentLeft="true"
	            android:background="@drawable/ic_yellowcircle"
	            android:onClick="onImageGridClick"
	            android:text="@string/button_image_circles" />
	        <Button
	            android:id="@+id/buttonMyWardrobe"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:background="@drawable/profilepic"
	            android:onClick="onImageGridClick"/>	        
	        <Button
	            android:id="@+id/buttonMyWardrobe"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="100dip"
	            android:layout_alignParentRight="true"
	            android:background="@drawable/ic_darkbluecircle"
	            android:onClick="onImageGridClick"
	            android:text="@string/button_image_wishlist" />
		</RelativeLayout>	
		
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    android:layout_marginTop="25dip">

		    <Button
		        android:id="@+id/buttonMyWardrobe"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginRight="46dp"
		        android:background="@drawable/ic_purplecircle"
		        android:onClick="onImageGridClick"
		        android:text="@string/button_image_wardrobe" />

		    <Button
		        android:id="@+id/buttonMyWardrobe"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginLeft="40dp"
		        android:background="@drawable/ic_pinkcircle"
		        android:onClick="onImageGridClick"
		        android:text="@string/button_image_suggestions" />

		</RelativeLayout>
		
		<TextView
	       android:id="@+id/textView1"
	       android:layout_width="fill_parent"
	       android:layout_height="0dp"
	       android:text="@string/textview_name_profilename" 
	       android:gravity="center"
	       android:layout_marginTop="5dp"
	       android:layout_weight="1"
	       android:textSize="20sp"
	       android:textColor="#7c7c7c"
           android:textStyle="bold"
           android:typeface="serif"/>
      
    </LinearLayout>

</RelativeLayout>